remove whitespace, fix crumb in sm vw

--- a/src/sass/pages/_results.scss
+++ b/src/sass/pages/_results.scss
@@ -242,7 +242,7 @@
   Result Container
 ------------------------------------------------------------------------ */
 .searchResults {
-	margin: 5em 0 100em 0;
+	margin: 5em 0 10em 0;
 	opacity: 1;
 	transition: $fade-transition, $slide-transition;
 	transform: translateY(0);
